Fix sources names and stretch temporal visualization

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,7 +9,7 @@ div.flexbox {
     flex-direction: column;
     align-items: center;
     box-shadow: 2px 2px 3px #333;
-    margin-top: 20px;
+    margin: 20px 0;
     align-self: flex-start;
 
     svg {
